03-jsx-functional components

--- a/01-inception/index.html
+++ b/01-inception/index.html
@@ -7,18 +7,11 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Learning react</h1>
+  
   <div id="root">
-    <h1>will be replaced by render methods react element</h1>
-    <h1>header</h1>
-    <h1>header</h1>
-    <h1>header</h1>
-    <h1>header</h1>
-    <h1>header</h1>
-    <h1>header</h1>
-    <h1>header</h1>
+    <h1>No rendering of react elements</h1>
   </div>
-  <p>p after root</p>
+  
 
   <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
